add full calculator logic, minor changes

--- a/style.css
+++ b/style.css
@@ -1,55 +1,69 @@
-body {
+body, button {
     font-family:'Jetbrains Mono', monospace;
     color:white;
     background-color: #121212;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
-  }
-
-  .button-container{
-    display:grid;
-    width:175px;
-    grid-template-columns: repeat(4, 1fr);
-    gap:5px;
-  }
-
-  .button {
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    width:60px;
-    height:60px;
-    background-color:#292929;
-    font-size:2rem;
-    transition: transform 0.3s ease;
-    border-radius:0.3rem;
-    user-select:none;
-  }
-  .zero{
-    grid-column: span 2;
-    width:125px;
-  }
-  .button:hover{
-    background-color: #464646;
-    transform: scale(1.05);
-  }
-  .equals{
-    background-color:#3A3B3C;
-  }
-  .input{
-    margin:0.5rem;
-    font-size:1.5rem;
-  }
-  .input-field{
-    display:flex;
-    align-items:center;
-    justify-content: end;
-    width:255px;
-    height:40px;
-    background-color: #464646;
-    border-radius: 0.3rem;
-    margin-bottom:0.5rem;
-  }
-  .delete img{
-    width:50px;
-    height:50px;    
-  }
+}
+.button-container{
+  display:grid;
+  width:175px;
+  grid-template-columns: repeat(4, 1fr);
+  gap:5px;
+}
+button {
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  width:60px;
+  height:60px;
+  background-color:#292929;
+  font-size:2rem;
+  transition: transform 0.1s ease;
+  border-radius:0.3rem;
+  user-select:none;
+  outline: none; /* Disable default button clicking animation */
+  border:none;
+}
+button:hover{
+  background-color: #464646;
+  transform: scale(1.05);
+}
+button:active{
+  transform:scale(1.00)
+}
+.zero{
+  grid-column: span 2;
+  width:125px;
+}
+.equals{
+  background-color:#3A3B3C;
+}
+.input{
+  margin:0.5rem;
+  font-size:1.5rem;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.input-field{
+  display:flex;
+  align-items:center;
+  justify-content: end;
+  width:255px;
+  height:40px;
+  background-color: #464646;
+  border-radius: 0.3rem;
+  margin-bottom:0.5rem;
+}
+.backspace img{
+  width:50px;
+  height:50px;    
+}
+footer{
+  position:fixed;
+  bottom:0;
+  font-size:0.8rem;
+}
+a{
+  color:inherit;
+}
